hphp/hack/test/typecheck/call_in_static_vec_like_array.php
<?hh

class C {
  public static function f() {
    return "lol";
  }
  public static $x = vec[C::f()];
}
